--- a/2. Distribution Characteristics/measuring_1d_distribution_asymmetry.ipynb
+++ b/2. Distribution Characteristics/measuring_1d_distribution_asymmetry.ipynb
@@ -30,8 +30,7 @@
    "metadata": {},
    "source": [
     "# VARIANCE\n",
-    "A measure of how much a distribution spreads out around the mean\n",
-    "Formally - is the expected value of the squared deviation from the mean\n",
+    "A measure of how much a distribution spreads out around the mean. Formally - this is the expected value of the squared deviation from the mean\n",
     "\n",
     "$$ Var = \\frac{1}{N} \\sum_{i=1}^N (x_i - \\mu)^2, $$\n",
     "\n",
